fixed z-index for .dropdown-block__dropdown-items

--- a/src/blocks/dropdown/dropdown.scss
+++ b/src/blocks/dropdown/dropdown.scss
@@ -68,7 +68,7 @@
     border-radius: 0 0 4px 4px;
     border: 1px solid rgba(31, 32, 65, 0.5);
     margin-top: -1px;
-    z-index: 1;
+    z-index: 5;
     position: absolute;
 
     &.dropdown-block__dropdown-items_hide {
